# open-neat

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  neat-env.pro
docs/: map.dot
include/: NEAT.h  OtherXor.h  config.h  genome.h  genomes_manager.h  id_generator.h  misc.h  network.h  node.h  node_id_generator.h  proto_network.h  species.h  test.h
src/: NEAT.cpp  OtherXor.cpp  config.cpp  genome.cpp  genomes_manager.cpp  network.cpp  node.cpp  proto_network.cpp  species.cpp
test/: CMakeLists.txt  ConfigTest.cpp  NetworkTest.cpp  NodeTest.cpp  ProtoNetworkTest.cpp
tests/: CMakeLists.txt  GenomeTest.cpp
