cmake_minimum_required(VERSION 2.6)
include_directories(include)
#include_directories(include ~/projects/googletest/googletest/include/)
#link_directories(~/projects/googletest/googletest/)
file(GLOB SOURCES "src/*.cpp")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(neat ${SOURCES} main.cpp)
target_link_libraries(neat Threads::Threads)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -DTEST=1 -pg -lpthread")
#add_library(gtest STATIC)

enable_testing()
add_subdirectory(test)
